CatalogCachePort updated to save all info from loanType