@@ -2,7 +2,7 @@ package co.com.pragma.metrics.aws;
 
 import io.micrometer.core.instrument.MeterRegistry;
 import io.micrometer.core.instrument.Tag;
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import software.amazon.awssdk.metrics.MetricCollection;
 import software.amazon.awssdk.metrics.MetricPublisher;
@@ -11,10 +11,9 @@ import java.time.Duration;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 
 @Component
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class MicrometerMetricPublisher implements MetricPublisher {
     private final ExecutorService service = Executors.newFixedThreadPool(10);
     private final MeterRegistry registry;
@@ -24,12 +23,12 @@ public class MicrometerMetricPublisher implements MetricPublisher {
         service.submit(() -> {
             List<Tag> tags = buildTags(metricCollection);
             metricCollection.stream()
-                    .filter(record -> record.value() instanceof Duration || record.value() instanceof Integer)
-                    .forEach(record -> {
-                        if (record.value() instanceof Duration) {
-                            registry.timer(record.metric().name(), tags).record((Duration) record.value());
-                        } else if (record.value() instanceof Integer) {
-                            registry.counter(record.metric().name(), tags).increment((Integer) record.value());
+                    .filter(metricRecord -> metricRecord.value() instanceof Duration || metricRecord.value() instanceof Integer)
+                    .forEach(metricRecord -> {
+                        if (metricRecord.value() instanceof Duration) {
+                            registry.timer(metricRecord.metric().name(), tags).record((Duration) metricRecord.value());
+                        } else if (metricRecord.value() instanceof Integer) {
+                            registry.counter(metricRecord.metric().name(), tags).increment((Integer) metricRecord.value());
                         }
                     });
         });
@@ -42,8 +41,8 @@ public class MicrometerMetricPublisher implements MetricPublisher {
 
     private List<Tag> buildTags(MetricCollection metricCollection) {
         return metricCollection.stream()
-                .filter(record -> record.value() instanceof String || record.value() instanceof Boolean)
-                .map(record -> Tag.of(record.metric().name(), record.value().toString()))
-                .collect(Collectors.toList());
+                .filter(metricRecord -> metricRecord.value() instanceof String || metricRecord.value() instanceof Boolean)
+                .map(metricRecord -> Tag.of(metricRecord.metric().name(), metricRecord.value().toString()))
+                .toList();
     }
 }
